Support one shot & tickless timer. Bringup secondary cpus. Support task scheduling. Create shell_init as a process in bootcpu. Other cpus enter idle process after bringup.
Signed-off-by: YaXing Guo <guoyaxing@bosc.ac.cn>

--- a/hal/Makefile
+++ b/hal/Makefile
@@ -3,5 +3,9 @@ obj-y += irq/
 obj-y += timer/
 obj-y += dma-mapping/
 obj-y += dmac/
+obj-y += task/
 obj-y += device_driver.o
 obj-y += event.o
+obj-y += cpu.o
+obj-y += percpu.o
+obj-y += clock.o
