--- a/app/command/Makefile
+++ b/app/command/Makefile
@@ -1,16 +1,16 @@
-obj-y += hello.o
-obj-y += devices.o
-obj-y += ls.o
-obj-y += devmm.o
-obj-y += history.o
-obj-y += dma_test.o
-obj-y += dma_test_ext.o
-obj-y += mem_read.o
-obj-y += imsic_test.o
-obj-y += spinlock_test.o
-obj-y += vcpu_run.o
-obj-y += user_run.o
-obj-y += page_tlb_test.o
-obj-y += task_info.o
-obj-y += csr_ctl.o
-obj-y += plic_set_affinity.o
+obj-$(CONFIG_APP_HELLO) += hello.o
+obj-$(CONFIG_APP_DEVICES) += devices.o
+obj-$(CONFIG_APP_LS) += ls.o
+obj-$(CONFIG_APP_DEVMEM) += devmm.o
+obj-$(CONFIG_APP_HISTORY) += history.o
+obj-$(CONFIG_APP_DMA_TEST) += dma_test.o
+obj-$(CONFIG_APP_DMA_TEST_EXT) += dma_test_ext.o
+obj-$(CONFIG_APP_MEM_READ) += mem_read.o
+obj-$(CONFIG_APP_IMSIC_TEST) += imsic_test.o
+obj-$(CONFIG_APP_SPINLOCK_TEST) += spinlock_test.o
+obj-$(CONFIG_APP_VCPU_RUN) += vcpu_run.o
+obj-$(CONFIG_APP_USER_RUN) += user_run.o
+obj-$(CONFIG_APP_PAGE_TLB_TEST) += page_tlb_test.o
+obj-$(CONFIG_APP_TASK_INFO) += task_info.o
+obj-$(CONFIG_APP_CSR_CTL) += csr_ctl.o
+obj-$(CONFIG_APP_PLIC_SET_AFFINITY) += plic_set_affinity.o
