--- a/drivers/uart/Makefile
+++ b/drivers/uart/Makefile
@@ -1,4 +1,4 @@
 # uart
-obj-y += ns16550a.o
-obj-y += qemu-8250.o
-obj-y += uartlite.o
+obj-$(CONFIG_NS16550A) += ns16550a.o
+obj-$(CONFIG_QEMU_8250) += qemu-8250.o
+obj-$(CONFIG_UARTLITE) += uartlite.o
