--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -1,6 +1,6 @@
-obj-y += uart/
-obj-y += irqchip/
-obj-y += timer/
-obj-y += dmac/
-obj-y += iommu/
-obj-y += imsic-test/
+obj-$(CONFIG_UART) += uart/
+obj-$(CONFIG_IRQCHIP) += irqchip/
+obj-$(CONFIG_TIMER) += timer/
+obj-$(CONFIG_DMAC) += dmac/
+obj-$(CONFIG_IOMMU) += iommu/
+obj-$(CONFIG_IMSIC_TEST) += imsic-test/
