Add huge_page_test command
Signed-off-by: YaXing Guo <guoyaxing@bosc.ac.cn>

--- a/app/command/Kconfig
+++ b/app/command/Kconfig
@@ -32,3 +32,5 @@ config APP_VCPU_RUN
 	bool "APP_VCPU_RUN"
 config APP_STREAM
 	bool "APP_STREAM"
+config APP_HUGE_PAGE_TEST
+	bool "APP_HUGE_PAGE_TEST"
