--- a/app/command/Makefile
+++ b/app/command/Makefile
@@ -15,3 +15,4 @@ obj-$(CONFIG_APP_TASK_INFO) += task_info.o
 obj-$(CONFIG_APP_CSR_CTL) += csr_ctl.o
 obj-$(CONFIG_APP_PLIC_SET_AFFINITY) += plic_set_affinity.o
 obj-$(CONFIG_APP_STREAM) += stream.o
+obj-$(CONFIG_APP_HUGE_PAGE_TEST) += huge_page_test.o
