Add tiny to support fragmented memory(less than PAGE_SIZE) allocation.
Signed-off-by: YaXing Guo <guoyaxing@bosc.ac.cn>

--- a/app/command/Kconfig
+++ b/app/command/Kconfig
@@ -34,3 +34,5 @@ config APP_STREAM
 	bool "APP_STREAM"
 config APP_HUGE_PAGE_TEST
 	bool "APP_HUGE_PAGE_TEST"
+config APP_TINY_TEST
+	bool "APP_TINY_TEST"
