Use tiny_alloc by default if the size is smaller than PAGE_SIZE in mm_alloc
Signed-off-by: YaXing Guo <guoyaxing@bosc.ac.cn>

--- a/Kconfig
+++ b/Kconfig
@@ -41,6 +41,10 @@ config MYUSER
 	bool "User process bin"
 	default y
 
+config ENABLE_TINY
+	bool "Enable Tiny mm"
+	default y
+
 config ENABLE_MMU
 	bool "Enable MMU"
 	default y
