Add CONFIG_VIRT to chose to complier virt/ or not
Signed-off-by: YaXing Guo <guoyaxing@bosc.ac.cn>

--- a/Kconfig
+++ b/Kconfig
@@ -34,6 +34,10 @@ choice
 		tristate "Select Sv57"
 endchoice
 
+config VIRT
+	bool "Virt"
+	default y
+
 config MYGUEST
 	bool "Guest OS bin"
 	default y
