--- a/Makefile.build
+++ b/Makefile.build
@@ -34,5 +34,7 @@ $(obj)/built-in.o: $(cur_objs) $(subdir_objs)
 %.o: %.c
 	$(CC) $(COPS) -I$(TOPDIR)/include -I$(GOS_CORE_DIR)/include $(DEBUG) -c $< -o $@
 
+%_s.o: %.S
+	$(CC) $(COPS) -I$(TOPDIR)/include $(DEBUG) -c $< -o $@
 
 .PHONY: $(PHONY)
