Add CONFIG_USER to chose whether to complier user/ or not.
Signed-off-by: YaXing Guo <guoyaxing@bosc.ac.cn>

--- a/Kconfig
+++ b/Kconfig
@@ -38,6 +38,10 @@ config VIRT
 	bool "Virt"
 	default y
 
+config USER
+	bool "User"
+	default y
+
 config MYGUEST
 	bool "Guest OS bin"
 	default y
