--- a/app/command/Kconfig
+++ b/app/command/Kconfig
@@ -29,6 +29,7 @@ config APP_TASK_INFO
 	bool "APP_TASK_INFO"
 config APP_USER_RUN
 	bool "APP_USER_RUN"
+	depends on USER
 config APP_VCPU_RUN
 	bool "APP_VCPU_RUN"
 	depends on VIRT
