--- a/app/command/Makefile
+++ b/app/command/Makefile
@@ -17,3 +17,4 @@ obj-$(CONFIG_APP_PLIC_SET_AFFINITY) += plic_set_affinity.o
 obj-$(CONFIG_APP_STREAM) += stream.o
 obj-$(CONFIG_APP_HUGE_PAGE_TEST) += huge_page_test.o
 obj-$(CONFIG_APP_TINY_TEST) += tiny_test.o
+obj-$(CONFIG_APP_PLANE) += plane/
