--- a/app/command/Makefile
+++ b/app/command/Makefile
@@ -19,3 +19,4 @@ obj-$(CONFIG_APP_HUGE_PAGE_TEST) += huge_page_test.o
 obj-$(CONFIG_APP_TINY_TEST) += tiny_test.o
 obj-$(CONFIG_APP_PLANE) += plane/
 obj-$(CONFIG_APP_GET_PTE_TEST) += get_pte_test.o
+obj-$(CONFIG_APP_SVNAPOT_TEST) += svnapot_test.o
