command: Add Multicore test cycas c2cas
Add two multicore test commands and add an 8-core device tree for test.

app/command/multicore/cycas:
        Generate nr_cpu threads for nr_repeat perform CAS operation.

usage:
        cycas [nr_cpu] [nr_repeat]

result:
        Shell >> cycas 8 100000
        Cyclic CAS TEST
        Shell >> ThreaThreaTd hd1 started
        rThread 4 started
        ead 32 started
        started
        Thread 6 started
        Thread 7 startTed
        hread 5 started
        Thread 0 started
        Thread 0 Cnt: 100000 Ticks: 4204278
        Thread 2 Cnt: 100000 Ticks: 5197960
        Thread 1 Cnt: 100000 Ticks: 5200681
        Thread 4 Cnt: 100000 Ticks: 5204085
        Thread 3 Cnt: 100000 Ticks: 5202630
        Thread 7 Cnt: 100000 Ticks: 5189507
        Thread 5 Cnt: 100000 Ticks: 5189663
        Thread 6 Cnt: 100000 Ticks: 5200289

app/command/multicore/c2cas:
        Perform a CAS operation between each hart, setting nr_repeat times. Repeat for 16 sets, average the cycle values and calculate the deviation.

usage:
        c2cas [nr_cpu] [nr_repeat]

result:
	 Core To Core CAS Latency

         		0                   1                   2                   3                   4                   5                   6                   7
	0
	1  814353(+- 115696) -
	2  842361(+- 122264) -  384824(+-  39842) -
	3  851052(+-   9343) -  384130(+-  17859) -  242392(+-  91298) -
	4  848677(+-  12635) -  390739(+-  37075) -  139488(+-  53644) -  230210(+-  94167) -
	5 1190933(+- 476666) -  286281(+- 542601) -  388410(+- 156857) -  395266(+- 156547) -  389784(+- 157374) -
	6 1297266(+- 424387) -  446051(+- 464590) -  237088(+- 101881) -  239761(+-  95899) -  225851(+- 123359) -  224390(+- 113009) -
	7 1293329(+- 431307) -  443880(+- 462913) -  238833(+- 107877) -  251638(+-  89262) -  234183(+- 134886) -  225562(+- 105889) -  243447(+-  99562) -

Signed-off-by: YunFeng Yang <yangyunfeng@bosc.ac.cn>

--- a/app/command/Makefile
+++ b/app/command/Makefile
@@ -20,3 +20,4 @@ obj-$(CONFIG_APP_TINY_TEST) += tiny_test.o
 obj-$(CONFIG_APP_PLANE) += plane/
 obj-$(CONFIG_APP_GET_PTE_TEST) += get_pte_test.o
 obj-$(CONFIG_APP_SVNAPOT_TEST) += svnapot_test.o
+obj-$(CONFIG_MULTICORE_TEST) += multicore/
