--- a/myUser/Makefile
+++ b/myUser/Makefile
@@ -30,7 +30,7 @@ MYUSER_OBJ_FILES += $(USER_COMMAND_C_FILES:$(MYUSER_COMMAND_DIR)/%.c=$(MYUSER_CO
 ifeq ($(CONFIG_MYUSER), y)
 myUser: $(MYUSER_OBJ_FILES)
 	mkdir -p $(BUILD_DIR)
-	$(LD) -T $(MYUSER_DIR)/myUser.lds -o $(BUILD_DIR)/$(USER_TARGET) $(MYUSER_OBJ_FILES) -Map $(BUILD_DIR)/myUser.map
+	$(LD) -T $(MYUSER_DIR)/myUser.lds -o $(BUILD_DIR)/$(USER_TARGET) $(MYUSER_OBJ_FILES) -Map $(BUILD_DIR)/myUser.map --no-warn-rwx-segments
 	$(RISCV_COPY) $(BUILD_DIR)/$(USER_TARGET) -O binary $(BUILD_DIR)/$(USER_TARGET_BIN)
 else
 myUser:
