--- a/virt/Kconfig
+++ b/virt/Kconfig
@@ -15,6 +15,8 @@ choice
 		tristate "Select qemu-8250"
 	config VIRT_UART_UARTLITE
 		tristate "Select uartlite"
+	config VIRT_UART_NS16550A
+		tristate "Select ns16550a"
 endchoice
 
 endmenu
