--- a/configs/fpga_h_defconfig
+++ b/configs/fpga_h_defconfig
@@ -6,29 +6,30 @@
 #
 # app
 #
-# CONFIG_APP_CSR_CTL is not set
-# CONFIG_APP_DEVICES is not set
+CONFIG_APP_CSR_CTL=y
+CONFIG_APP_DEVICES=y
 # CONFIG_APP_DEVMEM is not set
 # CONFIG_APP_DMA_TEST is not set
 # CONFIG_APP_DMA_TEST_EXT is not set
 CONFIG_APP_HELLO=y
-# CONFIG_APP_HISTORY is not set
+CONFIG_APP_HISTORY=y
 # CONFIG_APP_IMSIC_TEST is not set
-# CONFIG_APP_LS is not set
+CONFIG_APP_LS=y
 # CONFIG_APP_MEM_READ is not set
 CONFIG_APP_PAGE_TLB_TEST=y
-# CONFIG_APP_PLIC_SET_AFFINITY is not set
-# CONFIG_APP_SPINLOCK_TEST is not set
-# CONFIG_APP_TASK_INFO is not set
-# CONFIG_APP_USER_RUN is not set
+CONFIG_APP_PLIC_SET_AFFINITY=y
+CONFIG_APP_SPINLOCK_TEST=y
+CONFIG_APP_TASK_INFO=y
+CONFIG_APP_USER_RUN=y
 CONFIG_APP_VCPU_RUN=y
-# CONFIG_APP_STREAM is not set
-# CONFIG_APP_HUGE_PAGE_TEST is not set
-# CONFIG_APP_TINY_TEST is not set
-# CONFIG_APP_PLANE is not set
-# CONFIG_APP_GET_PTE_TEST is not set
-# CONFIG_MULTICORE_TEST is not set
-# CONFIG_APP_FLOAT_TEST is not set
+CONFIG_APP_STREAM=y
+CONFIG_APP_HUGE_PAGE_TEST=y
+CONFIG_APP_TINY_TEST=y
+CONFIG_APP_PLANE=y
+CONFIG_APP_GET_PTE_TEST=y
+# CONFIG_APP_SVNAPOT_TEST is not set
+CONFIG_MULTICORE_TEST=y
+CONFIG_APP_FLOAT_TEST=y
 # end of app
 
 #
@@ -96,6 +97,6 @@ CONFIG_USER=y
 CONFIG_MYGUEST=y
 CONFIG_MYUSER=y
 CONFIG_ENABLE_MMU=y
-# CONFIG_SVNAPOT is not set
+CONFIG_SVNAPOT=y
 CONFIG_ENABLE_MULTI_TASK=y
 CONFIG_ENABLE_SHELL=y
