Support to map huge page in guest memory gstage mapping
Signed-off-by: YaXing Guo <guoyaxing@bosc.ac.cn>

--- a/virt/Kconfig
+++ b/virt/Kconfig
@@ -19,4 +19,14 @@ choice
 		tristate "Select ns16550a"
 endchoice
 
+choice
+	prompt "Use 4K/2M/1G in guest memory gstage mapping"
+	config SELECT_4K_GUEST_MEM_MAPPING
+		tristate "Select 4k mapping"
+	config SELECT_2M_GUEST_MEM_MAPPING
+		tristate "Select 2m mapping"
+	config SELECT_1G_GUEST_MEM_MAPPING
+		tristate "Select 1g mapping"
+endchoice
+
 endmenu
