Use 2M mapping to map guest memory gstage mapping in aia test
Signed-off-by: YaXing Guo <guoyaxing@bosc.ac.cn>

--- a/configs/aia_test_defconfig
+++ b/configs/aia_test_defconfig
@@ -96,6 +96,9 @@ CONFIG_VIRT_ENABLE_AIA=y
 # CONFIG_VIRT_UART_8250 is not set
 CONFIG_VIRT_UART_UARTLITE=y
 # CONFIG_VIRT_UART_NS16550A is not set
+# CONFIG_SELECT_4K_GUEST_MEM_MAPPING is not set
+CONFIG_SELECT_2M_GUEST_MEM_MAPPING=y
+# CONFIG_SELECT_1G_GUEST_MEM_MAPPING is not set
 # end of virt
 
 # CONFIG_USER is not set
