Add unused_mem_walk to find unused memory block Add mm_alloc_fix to alloc memory in a fix physical address which set in first params
Signed-off-by: YaXing Guo <guoyaxing@bosc.ac.cn>

--- a/app/command/Kconfig
+++ b/app/command/Kconfig
@@ -54,3 +54,6 @@ config MULTICORE_TEST
 	bool "Multicore_test"
 config APP_FLOAT_TEST
 	bool "APP_FLOAT_TEST"
+config APP_MEM_WALK
+	bool "APP_MEM_WALK"
+	bool "APP_FLOAT_TEST"
