--- a/app/command/Makefile
+++ b/app/command/Makefile
@@ -22,3 +22,4 @@ obj-$(CONFIG_APP_GET_PTE_TEST) += get_pte_test.o
 obj-$(CONFIG_APP_SVNAPOT_TEST) += svnapot_test.o
 obj-$(CONFIG_MULTICORE_TEST) += multicore/
 obj-$(CONFIG_APP_FLOAT_TEST) += float_test.o
+obj-$(CONFIG_APP_MEM_WALK) += mem_walk.o
