--- a/configs/minimum_sv48_defconfig
+++ b/configs/minimum_sv48_defconfig
@@ -29,6 +29,7 @@ CONFIG_APP_VCPU_RUN=y
 # CONFIG_APP_GET_PTE_TEST is not set
 # CONFIG_MULTICORE_TEST is not set
 # CONFIG_APP_FLOAT_TEST is not set
+# CONFIG_APP_MEM_WALK is not set
 # end of app
 
 #
@@ -99,6 +100,23 @@ CONFIG_VIRT_UART_UARTLITE=y
 # CONFIG_SELECT_4K_GUEST_MEM_MAPPING is not set
 CONFIG_SELECT_2M_GUEST_MEM_MAPPING=y
 # CONFIG_SELECT_1G_GUEST_MEM_MAPPING is not set
+
+#
+# VIRT_MACHINE
+#
+CONFIG_VIRT_MEMORY_BASE=0x80000000
+CONFIG_VIRT_MEMORY_LEN=0x100000
+CONFIG_VIRT_UART_BASE=0x310b0000
+CONFIG_VIRT_UART_LEN=0x10000
+CONFIG_VIRT_SRAM_BASE=0x1000
+CONFIG_VIRT_SRAM_LEN=0x10000
+CONFIG_VIRT_MEMORY_TEST_BASE=0x10000000
+CONFIG_VIRT_MEMORY_TEST_LEN=0x1000
+CONFIG_VIRT_CLINT_BASE=0x38000000
+CONFIG_VIRT_CLINT_LEN=0x10000
+CONFIG_VIRT_IMSIC_BASE=0x20000000
+CONFIG_VIRT_IMSIC_LEN=0x1000
+# end of VIRT_MACHINE
 # end of virt
 
 CONFIG_USER=y
