--- a/configs/Sv57_defconfig
+++ b/configs/Sv57_defconfig
@@ -1,6 +1,7 @@
 #
-# Automatically generated file; DO NOT EDIT.
-# Main menu
+# Automatically generated make config: don't edit
+# Linux kernel version: 
+# Mon Jul 15 11:20:21 2024
 #
 
 #
@@ -24,12 +25,16 @@ CONFIG_APP_USER_RUN=y
 CONFIG_APP_VCPU_RUN=y
 CONFIG_APP_STREAM=y
 CONFIG_APP_HUGE_PAGE_TEST=y
-# end of app
+# CONFIG_APP_TINY_TEST is not set
+# CONFIG_APP_PLANE is not set
+# CONFIG_APP_GET_PTE_TEST is not set
+# CONFIG_MULTICORE_TEST is not set
+# CONFIG_APP_FLOAT_TEST is not set
+# CONFIG_APP_MEM_WALK is not set
 
 #
 # bsp
 #
-# end of bsp
 
 #
 # drivers
@@ -48,30 +53,67 @@ CONFIG_IRQCHIP=y
 CONFIG_AIA=y
 CONFIG_AIA_APLIC=y
 CONFIG_AIA_IMSIC=y
-# end of aia
 
 #
 # plic
 #
 CONFIG_PLIC=y
-# end of plic
-
 CONFIG_TIMER=y
 CONFIG_CLINT=y
 CONFIG_UART=y
 CONFIG_NS16550A=y
 CONFIG_QEMU_8250=y
 CONFIG_UARTLITE=y
-# end of drivers
 
+#
+# Memory Management
+#
+CONFIG_TINY=y
 CONFIG_SELECT_QEMU=y
 # CONFIG_SELECT_FPGA is not set
+# CONFIG_SELECT_KMH_FPGA is not set
 # CONFIG_SELECT_VCS is not set
 CONFIG_SELECT_AIA=y
 # CONFIG_SELECT_PLIC is not set
 # CONFIG_SELECT_SV39 is not set
 # CONFIG_SELECT_SV48 is not set
 CONFIG_SELECT_SV57=y
+CONFIG_SELECT_4K_DIRECT_MAPPING=y
+# CONFIG_SELECT_2M_DIRECT_MAPPING is not set
+# CONFIG_SELECT_1G_DIRECT_MAPPING is not set
+CONFIG_SELECT_4K_CODE_MAPPING=y
+# CONFIG_SELECT_2M_CODE_MAPPING is not set
+# CONFIG_SELECT_1G_CODE_MAPPING is not set
+CONFIG_VIRT=y
+
+#
+# virt
+#
+CONFIG_VIRT_ENABLE_TIMER=y
+CONFIG_VIRT_ENABLE_AIA=y
+CONFIG_VIRT_UART_8250=y
+# CONFIG_VIRT_UART_UARTLITE is not set
+# CONFIG_VIRT_UART_NS16550A is not set
+CONFIG_SELECT_4K_GUEST_MEM_MAPPING=y
+# CONFIG_SELECT_2M_GUEST_MEM_MAPPING is not set
+# CONFIG_SELECT_1G_GUEST_MEM_MAPPING is not set
+
+#
+# VIRT_MACHINE
+#
+CONFIG_VIRT_MEMORY_BASE=0x80000000
+CONFIG_VIRT_MEMORY_LEN=0x4000000
+CONFIG_VIRT_UART_BASE=0x310b0000
+CONFIG_VIRT_UART_LEN=0x10000
+CONFIG_VIRT_SRAM_BASE=0x1000
+CONFIG_VIRT_SRAM_LEN=0x10000
+CONFIG_VIRT_MEMORY_TEST_BASE=0x10000000
+CONFIG_VIRT_MEMORY_TEST_LEN=0x1000
+CONFIG_VIRT_CLINT_BASE=0x38000000
+CONFIG_VIRT_CLINT_LEN=0x10000
+CONFIG_VIRT_IMSIC_BASE=0x20000000
+CONFIG_VIRT_IMSIC_LEN=0x1000
+CONFIG_USER=y
 CONFIG_MYGUEST=y
 CONFIG_MYUSER=y
 CONFIG_ENABLE_MMU=y
