Update vcs_h_defconfig : Add virt machine config
Signed-off-by: YaXing Guo <guoyaxing@bosc.ac.cn>

--- a/configs/vcs_h_defconfig
+++ b/configs/vcs_h_defconfig
@@ -28,6 +28,8 @@ CONFIG_APP_VCPU_RUN=y
 # CONFIG_APP_PLANE is not set
 # CONFIG_APP_GET_PTE_TEST is not set
 # CONFIG_MULTICORE_TEST is not set
+# CONFIG_APP_FLOAT_TEST is not set
+# CONFIG_APP_MEM_WALK is not set
 # end of app
 
 #
@@ -58,12 +60,19 @@ CONFIG_TINY=y
 
 # CONFIG_SELECT_QEMU is not set
 # CONFIG_SELECT_FPGA is not set
+# CONFIG_SELECT_KMH_FPGA is not set
 CONFIG_SELECT_VCS=y
 # CONFIG_SELECT_AIA is not set
 CONFIG_SELECT_PLIC=y
 CONFIG_SELECT_SV39=y
 # CONFIG_SELECT_SV48 is not set
 # CONFIG_SELECT_SV57 is not set
+CONFIG_SELECT_4K_DIRECT_MAPPING=y
+# CONFIG_SELECT_2M_DIRECT_MAPPING is not set
+# CONFIG_SELECT_1G_DIRECT_MAPPING is not set
+CONFIG_SELECT_4K_CODE_MAPPING=y
+# CONFIG_SELECT_2M_CODE_MAPPING is not set
+# CONFIG_SELECT_1G_CODE_MAPPING is not set
 CONFIG_VIRT=y
 
 #
@@ -72,6 +81,27 @@ CONFIG_VIRT=y
 # CONFIG_VIRT_ENABLE_TIMER is not set
 # CONFIG_VIRT_UART_8250 is not set
 CONFIG_VIRT_UART_UARTLITE=y
+# CONFIG_VIRT_UART_NS16550A is not set
+CONFIG_SELECT_4K_GUEST_MEM_MAPPING=y
+# CONFIG_SELECT_2M_GUEST_MEM_MAPPING is not set
+# CONFIG_SELECT_1G_GUEST_MEM_MAPPING is not set
+
+#
+# VIRT_MACHINE
+#
+CONFIG_VIRT_MEMORY_BASE=0x80000000
+CONFIG_VIRT_MEMORY_LEN=0x100000
+CONFIG_VIRT_UART_BASE=0x310b0000
+CONFIG_VIRT_UART_LEN=0x10000
+CONFIG_VIRT_SRAM_BASE=0x1000
+CONFIG_VIRT_SRAM_LEN=0x10000
+CONFIG_VIRT_MEMORY_TEST_BASE=0x10000000
+CONFIG_VIRT_MEMORY_TEST_LEN=0x1000
+CONFIG_VIRT_CLINT_BASE=0x38000000
+CONFIG_VIRT_CLINT_LEN=0x10000
+CONFIG_VIRT_IMSIC_BASE=0x20000000
+CONFIG_VIRT_IMSIC_LEN=0x1000
+# end of VIRT_MACHINE
 # end of virt
 
 CONFIG_USER=y
