APP:Add stval test
Signed-off-by: Yu Hu <huyu@bosc.ac.cn>

--- a/app/command/Makefile
+++ b/app/command/Makefile
@@ -23,3 +23,5 @@ obj-$(CONFIG_APP_SVNAPOT_TEST) += svnapot_test.o
 obj-$(CONFIG_MULTICORE_TEST) += multicore/
 obj-$(CONFIG_APP_FLOAT_TEST) += float_test.o
 obj-$(CONFIG_APP_MEM_WALK) += mem_walk.o
+obj-$(CONFIG_APP_STVAL) += stval.o
+
