Support multiple vcpus on a cpu.
You can use command "vcpu_run_ext" to create more than one vcpus.
Its usage is the same as vcpu_run, and every time "vcpu_run_ext"
is called, a vcpu will be created and run on this cpu.

The virt subsystem of gos will allocate vmid itself, and the log of
vm has a prefix of "[VM%d log]"(%d is vmid of this vm).

Such as:
[VM1 log] XXXXX —— the log of vm1
[VM2 log] XXXXX —— the log of vm2

Ps. The usage of vcpu_run remains unchanged. It only creates a vcpu
when there is no existing vcpu in the cpu, and it will return the
first vcpu when there is a vcpu in the cpu.

Signed-off-by: YaXing Guo <guoyaxing@bosc.ac.cn>

--- a/app/command/Makefile
+++ b/app/command/Makefile
@@ -9,6 +9,7 @@ obj-$(CONFIG_APP_MEM_READ) += mem_read.o
 obj-$(CONFIG_APP_IMSIC_TEST) += imsic_test.o
 obj-$(CONFIG_APP_SPINLOCK_TEST) += spinlock_test.o
 obj-$(CONFIG_APP_VCPU_RUN) += vcpu_run.o
+obj-$(CONFIG_APP_VCPU_RUN_EXT) += vcpu_run_ext.o
 obj-$(CONFIG_APP_USER_RUN) += user_run.o
 obj-$(CONFIG_APP_PAGE_TLB_TEST) += page_tlb_test.o
 obj-$(CONFIG_APP_TASK_INFO) += task_info.o
