--- a/app/command/Kconfig
+++ b/app/command/Kconfig
@@ -33,6 +33,9 @@ config APP_USER_RUN
 config APP_VCPU_RUN
 	bool "APP_VCPU_RUN"
 	depends on VIRT
+config APP_VCPU_RUN_EXT
+	bool "APP_VCPU_RUN_EXT"
+	depends on VIRT
 config APP_STREAM
 	bool "APP_STREAM"
 config APP_HUGE_PAGE_TEST
