Add command "vcpu_info" to show info of vcpu on every cpus.
Usage: vcpu_info       -- show vcpu info on every cpus
       vcpu_info [cpu] -- show vcpu info on cpu

eg.
Shell >> vcpu_info
+++++++++++++ vcpu info on cpu0 +++++++++++++
@@@@@@@@@@@@@@ VM1 info: @@@@@@@@@@@@@@
- vmid : 1
- memory info:
    host_memory_va : 0xffffffd800200000
    host_memory_pa : 0xc0200000
    guest_memory_pa : 0x80000000
    memory_size : 0x4000000
- memory test info:
    host_memory_test_va : 0xffffffd800054000
    host_memory_test_pa : 0xc0054000
    guest_memory_test_pa : 0x10000000
    memory_test_size : 0x1000
- aia info:
    hgei : 1
    vs_interrupt_file_hva : 0xffffffc80401e000
    vs_interrupt_file_hpa : 0x28001000
    vs_interrupt_file_gpa : 0x20000000
    vs_interrupt_file_size : 0x1000

@@@@@@@@@@@@@@ VM2 info: @@@@@@@@@@@@@@
- vmid : 2
- memory info:
    host_memory_va : 0xffffffd804200000
    host_memory_pa : 0xc4200000
    guest_memory_pa : 0x80000000
    memory_size : 0x4000000
- memory test info:
    host_memory_test_va : 0xffffffd800065000
    host_memory_test_pa : 0xc0065000
    guest_memory_test_pa : 0x10000000
    memory_test_size : 0x1000
- aia info:
    hgei : 2
    vs_interrupt_file_hva : 0xffffffc80401f000
    vs_interrupt_file_hpa : 0x28002000
    vs_interrupt_file_gpa : 0x20000000
    vs_interrupt_file_size : 0x1000

@@@@@@@@@@@@@@ VM3 info: @@@@@@@@@@@@@@
- vmid : 3
- memory info:
    host_memory_va : 0xffffffd808200000
    host_memory_pa : 0xc8200000
    guest_memory_pa : 0x80000000
    memory_size : 0x4000000
- memory test info:
    host_memory_test_va : 0xffffffd800075000
    host_memory_test_pa : 0xc0075000
    guest_memory_test_pa : 0x10000000
    memory_test_size : 0x1000
- aia info:
    hgei : 3
    vs_interrupt_file_hva : 0xffffffc804020000
    vs_interrupt_file_hpa : 0x28003000
    vs_interrupt_file_gpa : 0x20000000
    vs_interrupt_file_size : 0x1000

Signed-off-by: YaXing Guo <guoyaxing@bosc.ac.cn>

--- a/app/command/Kconfig
+++ b/app/command/Kconfig
@@ -36,6 +36,9 @@ config APP_VCPU_RUN
 config APP_VCPU_RUN_EXT
 	bool "APP_VCPU_RUN_EXT"
 	depends on VIRT
+config APP_VCPU_INFO
+	bool "VCPU_INFO"
+	depends on VIRT
 config APP_STREAM
 	bool "APP_STREAM"
 config APP_HUGE_PAGE_TEST
