--- a/app/command/Makefile
+++ b/app/command/Makefile
@@ -7,6 +7,7 @@ obj-$(CONFIG_APP_DMA_TEST) += dma_test.o
 obj-$(CONFIG_APP_DMA_TEST_EXT) += dma_test_ext.o
 obj-$(CONFIG_APP_MEM_READ) += mem_read.o
 obj-$(CONFIG_APP_IMSIC_TEST) += imsic_test.o
+obj-$(CONFIG_APP_VS_IMSIC_MULTI_TEST) += vs_imsic_multi_test.o
 obj-$(CONFIG_APP_SPINLOCK_TEST) += spinlock_test.o
 obj-$(CONFIG_APP_VCPU_RUN) += vcpu_run.o
 obj-$(CONFIG_APP_VCPU_RUN_EXT) += vcpu_run_ext.o
