--- a/configs/fpga_h_defconfig
+++ b/configs/fpga_h_defconfig
@@ -1,7 +1,6 @@
 #
-# Automatically generated make config: don't edit
-# Linux kernel version: 
-# Mon Jul 15 11:21:58 2024
+# Automatically generated file; DO NOT EDIT.
+# Main menu
 #
 
 #
@@ -14,7 +13,6 @@ CONFIG_APP_DEVICES=y
 # CONFIG_APP_DMA_TEST_EXT is not set
 CONFIG_APP_HELLO=y
 CONFIG_APP_HISTORY=y
-# CONFIG_APP_IMSIC_TEST is not set
 CONFIG_APP_LS=y
 # CONFIG_APP_MEM_READ is not set
 CONFIG_APP_PAGE_TLB_TEST=y
@@ -23,19 +21,23 @@ CONFIG_APP_SPINLOCK_TEST=y
 CONFIG_APP_TASK_INFO=y
 CONFIG_APP_USER_RUN=y
 CONFIG_APP_VCPU_RUN=y
+CONFIG_APP_VCPU_RUN_EXT=y
+CONFIG_APP_VCPU_INFO=y
 CONFIG_APP_STREAM=y
 CONFIG_APP_HUGE_PAGE_TEST=y
 CONFIG_APP_TINY_TEST=y
 CONFIG_APP_PLANE=y
 CONFIG_APP_GET_PTE_TEST=y
-# CONFIG_APP_SVNAPOT_TEST is not set
 CONFIG_MULTICORE_TEST=y
 CONFIG_APP_FLOAT_TEST=y
 # CONFIG_APP_MEM_WALK is not set
+# CONFIG_APP_STVAL is not set
+# end of app
 
 #
 # bsp
 #
+# end of bsp
 
 #
 # drivers
@@ -51,36 +53,39 @@ CONFIG_IRQCHIP=y
 CONFIG_AIA=y
 CONFIG_AIA_APLIC=y
 CONFIG_AIA_IMSIC=y
+# end of aia
 
 #
 # plic
 #
 CONFIG_PLIC=y
+# end of plic
+
 CONFIG_TIMER=y
 CONFIG_CLINT=y
 CONFIG_UART=y
 CONFIG_NS16550A=y
 CONFIG_QEMU_8250=y
 CONFIG_UARTLITE=y
+# end of drivers
 
 #
 # Memory Management
 #
 CONFIG_TINY=y
+# end of Memory Management
+
 # CONFIG_SELECT_QEMU is not set
 # CONFIG_SELECT_FPGA is not set
 CONFIG_SELECT_KMH_FPGA=y
 # CONFIG_SELECT_VCS is not set
 # CONFIG_SELECT_AIA is not set
 CONFIG_SELECT_PLIC=y
-CONFIG_SELECT_SV39=y
-# CONFIG_SELECT_SV48 is not set
-# CONFIG_SELECT_SV57 is not set
-CONFIG_SELECT_4K_DIRECT_MAPPING=y
-# CONFIG_SELECT_2M_DIRECT_MAPPING is not set
+# CONFIG_SELECT_4K_DIRECT_MAPPING is not set
+CONFIG_SELECT_2M_DIRECT_MAPPING=y
 # CONFIG_SELECT_1G_DIRECT_MAPPING is not set
-CONFIG_SELECT_4K_CODE_MAPPING=y
-# CONFIG_SELECT_2M_CODE_MAPPING is not set
+# CONFIG_SELECT_4K_CODE_MAPPING is not set
+CONFIG_SELECT_2M_CODE_MAPPING=y
 # CONFIG_SELECT_1G_CODE_MAPPING is not set
 CONFIG_VIRT=y
 
@@ -91,8 +96,8 @@ CONFIG_VIRT=y
 # CONFIG_VIRT_UART_8250 is not set
 # CONFIG_VIRT_UART_UARTLITE is not set
 CONFIG_VIRT_UART_NS16550A=y
-CONFIG_SELECT_4K_GUEST_MEM_MAPPING=y
-# CONFIG_SELECT_2M_GUEST_MEM_MAPPING is not set
+# CONFIG_SELECT_4K_GUEST_MEM_MAPPING is not set
+CONFIG_SELECT_2M_GUEST_MEM_MAPPING=y
 # CONFIG_SELECT_1G_GUEST_MEM_MAPPING is not set
 
 #
@@ -110,10 +115,19 @@ CONFIG_VIRT_CLINT_BASE=0x38000000
 CONFIG_VIRT_CLINT_LEN=0x10000
 CONFIG_VIRT_IMSIC_BASE=0x20000000
 CONFIG_VIRT_IMSIC_LEN=0x1000
+CONFIG_VIRT_SCHEDULER_BASE=0x20000
+CONFIG_VIRT_SCHEDULER_LEN=0x1000
+CONFIG_VIRT_SELECT_SV39=y
+# CONFIG_VIRT_SELECT_SV48 is not set
+# CONFIG_VIRT_SELECT_SV57 is not set
+# end of VIRT_MACHINE
+# end of virt
+
 CONFIG_USER=y
 CONFIG_MYGUEST=y
 CONFIG_MYUSER=y
 CONFIG_ENABLE_MMU=y
-CONFIG_SVNAPOT=y
+CONFIG_ENABLE_SSTC=y
 CONFIG_ENABLE_MULTI_TASK=y
+CONFIG_TASK_SCHEDULER_PERIOD=20
 CONFIG_ENABLE_SHELL=y
