Add cmd_loader in Kconfig
Signed-off-by: YaXing Guo <guoyaxing@bosc.ac.cn>

--- a/app/command/Kconfig
+++ b/app/command/Kconfig
@@ -68,4 +68,7 @@ config APP_MEM_WALK
 	bool "APP_MEM_WALK"
 config APP_STVAL
 	bool "APP_STVAL"
+config APP_CMD_LOADER
+	bool "APP_CMD_LOADER"
+	default y
 
