--- a/app/command/Makefile
+++ b/app/command/Makefile
@@ -27,4 +27,5 @@ obj-$(CONFIG_MULTICORE_TEST) += multicore/
 obj-$(CONFIG_APP_FLOAT_TEST) += float_test.o
 obj-$(CONFIG_APP_MEM_WALK) += mem_walk.o
 obj-$(CONFIG_APP_STVAL) += stval.o
+obj-$(CONFIG_APP_CMD_LOADER) += cmd_loader.o
 
