--- a/app/command/Makefile
+++ b/app/command/Makefile
@@ -28,4 +28,5 @@ obj-$(CONFIG_APP_FLOAT_TEST) += float_test.o
 obj-$(CONFIG_APP_MEM_WALK) += mem_walk.o
 obj-$(CONFIG_APP_STVAL) += stval.o
 obj-$(CONFIG_APP_CMD_LOADER) += cmd_loader.o
+obj-$(CONFIG_APP_MEM_TESTER) += mem_tester.o
 
