Add hfence_gvma.all test
Shell >> g_stage_test hfence_gvma.all
vcpu_create_gstage_mapping -- vcpu->host_memory_va: 0xffffffd800200000
gstage page mapping[ddr] -- gpa:0x80000000 -> hpa:0x80600000 size:0x4000000
gstage page mapping[sram] -- gpa:0x1000 -> hpa:0x80451000 size:0x10000
gstage page mapping[memory test] -- gpa:0x10000000 -> hpa:0x80463000 size:0x1000
gstage page mapping[memory test] -- gpa1:0x10000040 -> hpa1:0x80463040 size:0x1000
vmid: 1
entry_host_va  0x0 data:0x1f50
entry_host_va  0x0 data:0x1f50
gstage page mapping[uart] -- gpa:0x310b0000 -> hpa:0x310b0000 size:0x10000
vcpu startup success, cost: 4716825(cycles)
[VM1 on cpu0 log]hello guest os!!
[VM1 on cpu0 log]stvec=0x80000010, 0x80000010
[VM1 on cpu0 log]Available Memory: phy_start_address:0x8002f000, phy_end_address:0x84000000, available size:65348KB, 16337 available pages, page_size:4096
[VM1 on cpu0 log]mmu_code_page_mapping -- pa:0x80000000 va:0x80000000 len:0x2eae0
[VM1 on cpu0 log]mmu_direct_page_mapping -- pa:0x8002f000 va:0xffffffd800000000 len:0x3fd1000
[VM1 on cpu0 log]mmu_hw_page_mapping -- pa:0x1000 va:0xffffffc6fea00000 len:0x10000
[VM1 on cpu0 log]mmu_sram_page_mapping -- pa:0x1000 va:0x1000 len:0x10000
[VM1 on cpu0 log]mmu page mapping finish...
[VM1 on cpu0 log]va:Hello this is memory test pa1!!!, va1:Hello this is memory test pa2!!!
[VM1 on cpu0 log]guest mmu is on!
[VM1 on cpu0 log]satp:0x800000000008002f
[VM1 on cpu0 log]addr:0xffffffc800010000 -- Hello this is memory test pa1!!!, 0x80017f08
[VM1 on cpu0 log]addr1:0xffffffc800010040 -- Hello this is memory test pa2!!!, 0x80017f00
----->before fence_gvma.all va value:
[VM1 on cpu0 log]addr:0xffffffc800010000 -- Hello this is memory test pa1!!!, 0x80017f08
[VM1 on cpu0 log]addr1:0xffffffc800010040 -- Hello this is memory test pa2!!!, 0x80017f00
----->after fence_gvma.all va value:
Shell >> [VM1 on cpu0 log]addr:0xffffffc800010000 -- The host memory pa1!, 0x80017f08
[VM1 on cpu0 log]addr1:0xffffffc800010040 -- The host memory pa2!, 0

--- a/app/command/Kconfig
+++ b/app/command/Kconfig
@@ -73,4 +73,6 @@ config APP_CMD_LOADER
 	default y
 config APP_MEM_TESTER
 	bool "APP_MEM_TESTER"
-
+config APP_G_STAGE_TEST
+	bool "APP_G_STAGE_TEST"
+	default y
