--- a/Kconfig
+++ b/Kconfig
@@ -72,6 +72,10 @@ config ENABLE_SSTC
 	bool "Enable Sstc"
 	default n
 
+config ENABLE_SVPBMT
+	bool "Enable Svpbmt"
+	default y
+
 config ENABLE_VS_SSTC
 	bool "Enable Sstc in vs mode"
 	default y
