Add scan memory test
The testing parameters include the testing address and range, and the program will
automatically detect and provide testable addresses and ranges

Shell >> scan_mem_test 0xc006000 1
mem_start:0xc006000, mem_size:0x1, mem_data:0x89984546148341
please use unused mem:
addr: 0x80441000 len: 0x7fbbf000
Shell >> scan_mem_test 0x80441000 0x10000
mem_start:0x80441000, mem_size:0x10000, mem_data:0x89984546148341
ddr start == 0xffffffd800041000
write addr is :0xffffffd800041000
write addr is :0xffffffd800045000
write addr is :0xffffffd800049000
write addr is :0xffffffd80004d000
check addr is :0xffffffd800041000
check addr is :0xffffffd800045000
check addr is :0xffffffd800049000
check addr is :0xffffffd80004d000
ddr data is ok

Signed-off-by: qinshaoqing <qinshaoqing@bosc.ac.cn>
Signed-off-by: yangyinglu <yangyinglu@bosc.cn>

--- a/app/command/Kconfig
+++ b/app/command/Kconfig
@@ -80,3 +80,7 @@ config APP_SVPBMT_TEST
 	bool "APP_SVPBMT_TEST"
 	depends on ENABLE_SVPBMT
 	default y
+config APP_SCAN_MEM_TEST
+	bool "APP_SCAN_MEM_TEST"
+	default y
+
