--- a/configs/dts/gos-dualcore.dts
+++ b/configs/dts/gos-dualcore.dts
@@ -15,6 +15,11 @@
 		reg = <0x00 0xc0000000 0x0 0x100000>;
 	};
 
+	reserved-memory@0xd0000000 {
+		device_type = "reserved-memory";
+		reg = <0x00 0xd0000000 0x0 0x100000>;
+	};
+
 	cpus {
 		#address-cells = <0x01>;
 		#size-cells = <0x00>;
