--- a/.github/workflows/makefile-test.yml
+++ b/.github/workflows/makefile-test.yml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: install riscv64 toolchain package
-      run: sudo apt install gcc-riscv64-linux-gnu
+      run: export PATH=$PATH:/opt/riscv-gcv-230425/bin
 
     - name: make
       run: ./build.sh fpga-h
