--- a/.github/workflows/makefile-test.yml
+++ b/.github/workflows/makefile-test.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: [self-hosted,linux]
 
     steps:
+    - uses: actions/checkout@v4
+    
     - name: set-env
       run: export PATH=$PATH:/opt/riscv-gcv-230425/bin
 
