--- a/.github/workflows/makefile-test.yml
+++ b/.github/workflows/makefile-test.yml
@@ -12,7 +12,10 @@ jobs:
     - uses: actions/checkout@v4
     
     - name: set-env
-      run: export PATH=$PATH:/opt/riscv-gcv-230425/bin
+      run: |
+        export PATH=$PATH:/opt/riscv-gcv-230425/bin
+        export CROSS_COMPILE=riscv64-unknown-linux-gnu-
+        export ARCH=riscv
 
     - name: make
       run: ./build.sh fpga-h
