--- a/.github/workflows/makefile-test.yml
+++ b/.github/workflows/makefile-test.yml
@@ -16,6 +16,7 @@ jobs:
         export PATH=$PATH:/opt/riscv-gcv-230425/bin
         export CROSS_COMPILE=riscv64-unknown-linux-gnu-
         export ARCH=riscv
+        echo "hello" > auto_run.bin
         ./build.sh default
 
     - name: running
